*: Adapt for stricter pylint 3.0.2 -> 3.0.3 rules

--- a/03-dns-empirical/plot/setup.cfg
+++ b/03-dns-empirical/plot/setup.cfg
@@ -17,10 +17,15 @@ omit =
 
 
 [pylint]
+max-statements = 75
+max-branches = 20
 max-line-length = 88
+max-locals = 20
 
 [pylint.messages control]
 disable =
+    consider-iterating-dictionary,
+    consider-using-dict-items,
     duplicate-code,
     invalid-name,
     missing-module-docstring,
