--- a/05-06-evaluation/scripts/plots/setup.cfg
+++ b/05-06-evaluation/scripts/plots/setup.cfg
@@ -17,15 +17,23 @@ omit =
 
 
 [pylint]
+max-args = 12
+max-statements = 75
+max-branches = 20
 max-line-length = 88
+max-locals = 20
+max-nested-blocks = 8
 
 [pylint.messages control]
 disable =
+    consider-iterating-dictionary,
+    consider-using-dict-items,
     duplicate-code,
     invalid-name,
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
+    useless-return,
 
 [flake8]
 max-line-length = 88
