--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -66,7 +66,11 @@ jobs:
       run: |
         cd ${{ matrix.script_collection }}
         pyenv="py$(echo "${{ matrix.python-version }}" | tr -d '.')"
-        toxenvs="lint,flake8,black,${pyenv}-test"
+        toxenvs="lint,flake8,${pyenv}-test"
+        if [ ${pyenv} != "py37" ]; then
+            # black does not support python 3.7 since 23.7
+            toxenvs="black,${toxenvs}"
+        fi
         tox -e ${toxenvs}
     # - uses: actions/upload-artifact@main
     #   name: Generate plots artifacts
