Disable new linter warning

--- a/05-06-evaluation/scripts/plots/setup.cfg
+++ b/05-06-evaluation/scripts/plots/setup.cfg
@@ -28,6 +28,7 @@ max-nested-blocks = 8
 disable =
     consider-iterating-dictionary,
     consider-using-dict-items,
+    consider-using-max-builtin,
     duplicate-code,
     invalid-name,
     missing-module-docstring,
